# img-text-search

./: .gitignore  pyproject.toml
src/: main.py  screen_capture.py  text_search.py
