[tool.poetry]
name = "img-text-search"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pyautogui = "^0.9.54"
pyscreeze = "^0.1.29"
pillow = "^10.0.1"
pylint = "^3.0.1"
pytesseract = "^0.3.10"
opencv-python = "^4.8.1.78"
selenium = "^4.13.0"
webdriver-manager = "^4.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
